--- a/UI/src/app/modules/comparison/components/spatial-extent/spatial-extent.component.html
+++ b/UI/src/app/modules/comparison/components/spatial-extent/spatial-extent.component.html
@@ -1,13 +1,14 @@
 <div class="p-grid">
   <div class="p-col-12">
-    <p-checkbox label="Compare the union of spatial extents"
+    <p-checkbox label="Include all points from the selected validations"
                 [binary]="true"
                 [disabled]="this.disabled"
                 [ngModel]="spatialExtentChecked"
                 (ngModelChange)="spatialExtentChange($event)">
     </p-checkbox>
     <label class="p-panel-header-icon"
-           pTooltip="{{'When the default is intersection, you can choose to compare the union instead'}}"
+           pTooltip="{{'By default, only common points between the validations are considered ' +
+            '(unless the validations are non-overlapping)'}}"
            tooltipPosition="bottom">
       <span class="pi pi-question-circle p-ml-2"></span>
     </label>
