--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -97,7 +97,7 @@
     <p-panel header="Spatial extent" [toggleable]="true">
       <ng-template pTemplate="icons">
         <label class="p-panel-header-icon"
-               pTooltip="Specify the spatial extent of the comparison. By default, the intersection of the spatial extents is chosen; in case of non-overlapping extents, the union is taken instead."
+               pTooltip="When the selected validations are partially overlapping, all or only common points can be selected."
                tooltipPosition="bottom">
           <span class="pi pi-question-circle"></span>
         </label>
