--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -18,13 +18,13 @@
     <div class="container mb-5 mt-4"
          style="max-width: 60rem;">
       <!--       summary of the selected comparison  -->
-      <!--    <qa-comparison-summary></qa-comparison-summary>-->
+      <qa-comparison-summary></qa-comparison-summary>
 <!--        visualize the validation extent-->
       <qa-extent-visualization></qa-extent-visualization>
     <!--  table section  -->
-<!--      <qa-table-comparison></qa-table-comparison>-->
+      <qa-table-comparison></qa-table-comparison>
     <!--  plots section  -->
-<!--      <qa-plots></qa-plots>-->
+      <qa-plots></qa-plots>
     </div>
   </div>
 </div>
