--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -100,11 +100,14 @@
               </qa-basic-filter>
 
             </ng-container>
-            <qa-ismn-network-filter
-              *ngIf="validationModel.referenceConfigurations[0].ismnNetworkFilter"
-              [filterModel]="validationModel.referenceConfigurations[0].ismnNetworkFilter"></qa-ismn-network-filter>
+            <div *ngIf="validationModel.referenceConfigurations[0].ismnNetworkFilter$|async">
+              <qa-ismn-network-filter
+
+                [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
+                [filterModel]="validationModel.referenceConfigurations[0].ismnNetworkFilter$"></qa-ismn-network-filter>
+            </div>
             <qa-ismn-depth-filter
-              *ngIf="validationModel.referenceConfigurations[0].ismnDepthFilter"></qa-ismn-depth-filter>
+              *ngIf="validationModel.referenceConfigurations[0].ismnDepthFilter$"></qa-ismn-depth-filter>
           </div>
 
         </p-panel>
