--- a/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
@@ -10,6 +10,6 @@
 
   </div>
 </div>
-<p-dialog header="Select network(s)" [(visible)]="networkSelectorVisible">
+<p-dialog styleClass="networkDialog" header="Select network(s)" position="top" [(visible)]="networkSelectorVisible">
   <p-tree [value]="networkTree" selectionMode="checkbox"></p-tree>
 </p-dialog>
