styling for mobile devices improved

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
@@ -57,3 +57,10 @@ a.no-decorations{
   display: none;
 }
 
+
+@media screen and (max-width: 714.9px){
+  .col-sm{
+    padding: 0;
+    height: 100%;
+  }
+}
