--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -122,7 +122,7 @@
       </span>
     </div>
     <!-- Status / Created   -->
-    <div class="p-col status pl-2 p-ml-3">
+    <div class="p-col status">
       <!--    PUBLISHED -->
       <div *ngIf="published">
         <strong>Created:</strong><br/>
