--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
@@ -6,6 +6,8 @@
 }
 .status{
   max-width: 8rem;
+  margin-left: 1rem;
+  padding-left: 0.5rem;
 }
 
 h5 {
@@ -25,6 +27,89 @@ input{
 a.doilink {
   color: white;
   text-decoration: none;
+}
+
+@media screen and (min-width: 564px) and (max-width: 714.9px){
+  .status{
+    max-width: 4rem;
+    margin-left: 0;
+  }
+  div.p-col-3{
+    width: 4rem;
+  }
+  h5 {
+    font-size: 1rem;
+  }
+
+  #new-name{
+    width: 4rem;
+  }
+
+}
+
+@media screen and (max-width: 563.9px){
+  div.p-col:not(.status){
+    min-width: 80vw;
+    padding: 0;
+    padding-bottom: 0.5rem;
+  }
+
+  .status{
+    min-width: 40vw;
+    max-width: 50vw;
+    padding: 0;
+    margin: 0;
+    text-align: left;
+  }
+
+  div.p-col-3{
+    float: right;
+    min-width: 25vw;
+    max-width: 30vw;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 377.9px){
+  div.p-col:not(.status){
+    min-width: 65vw;
+    padding: 0;
+  }
+  .status{
+    min-width: 30vw;
+    max-width: 40vw;
+    padding: 0;
+    margin: 0;
+  }
+
+  div.p-col-3{
+    min-width: 30vw;
+    max-width: 40vw;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 287.9px){
+  div.p-grid{
+    font-size: 0.9rem;
+  }
+
+  div.p-col:not(.status){
+    min-width: 55vw;
+    padding: 0;
+  }
+  .status{
+    min-width: 30vw;
+    max-width: 40vw;
+    padding: 0;
+    margin: 0;
+  }
+
+  div.p-col-3{
+    min-width: 40vw;
+    max-width: 50vw;
+    padding: 0;
+  }
 }
 
 
