New UI styling (#226)
* printing removed

* original colors applied to the navigation bar

* navigation bar icons enlarged

* p-panel edited

* z-index = 0 set, otherwise links don't work

* hrefs removed as they are not needed

* base font family added

* page 'about' styled

* help page styled, bootstrap import removed, images loaded with base64

* common styling moved to a global file

* sorting added so that there is always the same order in the table; styling added

* div changed to main, bootstrap removed, global styling loaded

* fixing home page

* global styling moved to styles.scss

* link to global styles updated

* styling buttons moved to global styles

* styling buttons moved to global styles

* redundant classes removed, bootstrap styling copied to styles.scss and importing bootstrap removed

* accordion tab styled; buttons for adding and removing datasets styled

* map collapsed and put after spatial subsetting

* buttons styling moved to global styles

* panel header padding changed

* edit name button background color changed

* icon for editing name set to font awesome; global styling loaded instead of bootstrap and buttons component

* class hidden moved to global styles

* p-panel content top and bottom padding set to 1rem

* styling for save name and cancel editing buttons added

* class result_page removed, label to the input added

* some text styling added

* styling for p-panel used in validationrun-row.component.html added

* text size in the input updated

* font color changed on the dropdown with action buttons

* some button styling added

* column size changed

* bootstrap button styling removed; used pButton instead with the old styling

* link decorations removed

* buttons for editing name styled using primeng

* buttons for editing name styled using primeng

* col-sm class added

* bootstrap classes changed to primeng classes

* doi link styled

* not

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -122,7 +122,7 @@
       </span>
     </div>
     <!-- Status / Created   -->
-    <div class="p-col status pl-2 p-ml-3">
+    <div class="p-col status">
       <!--    PUBLISHED -->
       <div *ngIf="published">
         <strong>Created:</strong><br/>
@@ -136,7 +136,7 @@
     </div>
 
     <!-- Action Buttons -->
-    <div class="p-col-2" style="max-width: 12rem">
+    <div class="p-col-3" style="max-width: 10rem">
       <qa-buttons [validationList]="true" [validationRun]="validationRun" [published]="published"></qa-buttons>
     </div>
 
