--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -350,9 +350,10 @@ img {
     margin-left: 15px;
   }
 
-  .container, .container-sm {
-    max-width: 540px;
-  }
+  //.container, .container-sm {
+  //  max-width: 540px;
+  //}
+
   .navbar-expand-sm > .container,
   .navbar-expand-sm > .container-fluid, .navbar-expand-sm > .container-sm, .navbar-expand-sm > .container-md, .navbar-expand-sm > .container-lg, .navbar-expand-sm > .container-xl {
     padding-right: 0;
@@ -387,9 +388,9 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .container, .container-sm, .container-md {
-    max-width: 720px;
-  }
+  //.container, .container-sm, .container-md {
+  //  max-width: 720px;
+  //}
   .d-md-flex {
     display: -ms-flexbox !important;
     display: flex !important;
@@ -417,9 +418,10 @@ img {
     flex-wrap: nowrap;
   }
 
-  .container, .container-sm, .container-md, .container-lg {
-    max-width: 960px;
-  }
+
+  //.container, .container-sm, .container-md, .container-lg {
+  //  max-width: 960px;
+  //}
 
 }
 
@@ -438,9 +440,9 @@ img {
     flex-wrap: nowrap;
   }
 
-  .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px;
-  }
+  //.container, .container-sm, .container-md, .container-lg, .container-xl {
+  //  max-width: 1140px;
+  //}
 
 }
 
