--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -49,7 +49,7 @@
     <p>
         <b>Step 3 [optional]</b> - If you want to intercompare several datasets, you can add more datasets to the validation
         using the <b>+</b> button, up to a maximum of five. Configure the settings for the additional datasets by selecting
-        the respective tab and repeating steps 1 and 2 above.<br/>
+        the respective tab and repeating steps 1 and 2 above. You can remove a dataset by clicking x on the active tab.<br/>
     </p>
     <p class="alert alert-info">
         <b>Intercomparison:</b> The intercomparison mode of QA4SM validates up to five satellite data sets against a common
@@ -71,7 +71,21 @@
     <p>
         <b>Step 5 [optional]</b> - Choose the criteria by which you would like to filter the reference data prior to
         running the validation. The filters available depend on the data contained within the chosen dataset. For example,
-        you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
+        you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;. You can also choose particular
+        networks and depth range at which the measurements have been done. To do that you have to open an appropriate window by clicking a 'select...'
+        link next to the filter you want to parameterised.
+    </p>
+    <img class="scaled_image mb-3" src="../../static/images/help/networks.png">
+    <p>
+        The window for choosing networks contains a list of continents. When clicking a continent name a list of networks that belong to the continent folds down.
+        Next to each network there is a name of the country that the network belongs to given. To toggle the particular network it is enough to click on its name.
+        The choice has to be approved clicking the 'Use networks' button.
+    </p>
+    <img class="scaled_image mb-3" src="../../static/images/help/depths.png">
+    <p>
+        The window for the depth selection contains two fields for introducing the depth range. Again, the choice has to be accepted clicking the 'Use depth range' button.
+        <br>
+        <br>
         Details of the filter options provided for each dataset are given on the supported datasets page
         <a href="{% url 'datasets' %}">here</a>. You can also hover your mouse pointer over the question mark next to a filter
         to get a short explanation.
@@ -98,9 +112,10 @@
     <img class="scaled_image mb-3" src="../../static/images/help/map_selection.png">
     <p>
         <b>Step 8 [optional]</b> - Choose the date range over which the validation should be performed. Accepted formats are: YYYY*MM*DD
-        or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. If you don't provide a period it will be
-        implicitly determined through temporal matching of the data and reference selected. For the time range covered by the various
-        datasets, see the <a href="{% url 'datasets' %}">datasets page</a>.
+        or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. It is also possible to choose a date from a calendar, available under the calendar button.
+        By default, the date range is determined through temporal matching of the data and reference selected.
+        If you leave validation period fields empty, the default date range will be used.  For the time range
+        covered by the various datasets, see the <a href="{% url 'datasets' %}">datasets page</a>.
     </p>
     <img class="scaled_image mb-3" src="../../static/images/help/validation_period.png">
 
@@ -127,8 +142,8 @@
     <img class="scaled_image mb-3" src="../../static/images/help/scaling.png">
 
     <p>
-        <b>Step 11</b> - Optionally name your validation results to make it easier to identify it in
-        the list of all your validations.
+        <b>Step 11 [optional]</b> - Name your validation results to make it easier to identify it in the list of all your validations.
+        Note that it is possible to change the name later, unless the validation has been published.
     </p>
     <img class="scaled_image mb-3" src="../../static/images/help/name_your_validation.png">
 
@@ -143,7 +158,9 @@
     <h1 id="help3" class="h3 mb-3 font-weight-normal">My Validations - Results List Page</h1>
 
     <p>
-        The list shows all your validations, including the currently running ones, sorted by date (latest first).
+        The list shows all your validations, including the currently running ones, sorted by default by date (latest first).
+        It is possible to sort the list according to the validation name, date, status and the dataset used as the reference.
+        Apart from the validations run by the particular user, there can be also listed published validations that are tracked by the user.
     </p>
 
     <img class="scaled_image mb-3" src="../../static/images/help/my_validations.png">
@@ -196,7 +213,8 @@
             </li>
             <li>
                 <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
-                or was aborted and will permanently delete the result.
+                or was aborted and will permanently delete the result. The remove button next to a validation being track,
+                only removes the validation from this list, but not deletes it.
             </li>
             <li>
                 <span class="fas fa-download"></span> The download graphs button allows you to download all graphs
@@ -222,9 +240,13 @@
             auto-cleanup again. It will be automatically extended, so you will have another {{ expiry_period }} days before
             deletion and will be notified (again).
         </li>
+        <li>
+            <span class="fas fa-redo"></span> With this button you can load settings of the particular validations; you will be redirected
+            to the validate page.
+        </li>
         </ul>
     </p>
-    <img class="scaled_image mb-3" src="../../static/images/help/my_validations.png">
+<!--    <img class="scaled_image mb-3" src="../../static/images/help/my_validations.png">-->
 
     <a id="results"></a>
     <h1 class="h3 mb-3 font-weight-normal">Validation Results Page</h1>
