--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -213,7 +213,7 @@
             </li>
             <li>
                 <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
-                or was aborted and will permanently delete the result. The remove button next to a validation being track,
+                or was aborted and will permanently delete the result. The remove button next to a validation being tracked,
                 only removes the validation from this list, but not deletes it.
             </li>
             <li>
