--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -214,7 +214,7 @@
             <li>
                 <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
                 or was aborted and will permanently delete the result. The remove button next to a validation being tracked,
-                only removes the validation from this list, but not deletes it.
+                only removes the validation from this list, but doesn't delete it.
             </li>
             <li>
                 <span class="fas fa-download"></span> The download graphs button allows you to download all graphs
