some info added

--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -286,6 +286,10 @@
             with a <a target="_blank" href="https://www.doi.org/">DOI</a>. See section
             <a href="#publication">Publication</a> for details.
         </li>
+        <li>
+            <span class="fas fa-redo"></span> <span class="font-weight-bold">Load settings</span> will load settings of the particular validations; you will be redirected
+            to the validate page.
+        </li>
     </ul>
 
 
