button margin added

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6050,6 +6050,7 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 
 .btn-action.p-button {
   width: 2rem;
+  margin-bottom: 0.2rem;
 }
 
 .btn-action.p-button, .btn-action-large.p-button{
