--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -23,7 +23,7 @@
     <h1 class="h3 mb-3 font-weight-normal">Validate Page</h1>
 
     <p>
-        The validate page is subdivided into areas for the various validation parameters. Each area has
+        The validate page is subdivided into areas for the various validation parameters. Each area has a
         menu with two icons on the top right. Hover over the question mark to get help for the respective areas. You can
         use the +/- icon to fold up or fold down the area.
     </p>
@@ -71,19 +71,20 @@
     <p>
         <b>Step 5 [optional]</b> - Choose the criteria by which you would like to filter the reference data prior to
         running the validation. The filters available depend on the data contained within the chosen dataset. For example,
-        you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;. You can also choose particular
-        networks and depth range at which the measurements have been done. To do that you have to open an appropriate window by clicking a 'select...'
+        you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
+        You can also choose specific networks and/or measurements in a defined depth range.
+        To do that you have to open an appropriate window by clicking a 'select...'
         link next to the filter you want to parameterised.
     </p>
     <img class="scaled_image mb-3" src="../../static/images/help/networks.png">
     <p>
-        The window for choosing networks contains a list of continents. When clicking a continent name a list of networks that belong to the continent folds down.
-        Next to each network there is a name of the country that the network belongs to given. To toggle the particular network it is enough to click on its name.
-        The choice has to be approved clicking the 'Use networks' button.
+        The window for choosing networks contains a list of continents. When clicking a continent name a list of networks that belong to the continent unfolds.
+        Next to each network there is the name of the country it belongs to. To toggle the particular network it is enough to click on its name.
+        The choice has to be approved by clicking the 'Use networks' button.
     </p>
     <img class="scaled_image mb-3" src="../../static/images/help/depths.png">
     <p>
-        The window for the depth selection contains two fields for introducing the depth range. Again, the choice has to be accepted clicking the 'Use depth range' button.
+        The window for the depth selection contains two fields for introducing the depth range. Again, the choice has to be accepted by clicking the 'Use depth range' button.
         <br>
         <br>
         Details of the filter options provided for each dataset are given on the supported datasets page
@@ -113,7 +114,7 @@
     <p>
         <b>Step 8 [optional]</b> - Choose the date range over which the validation should be performed. Accepted formats are: YYYY*MM*DD
         or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. It is also possible to choose a date from a calendar, available under the calendar button.
-        By default, the date range is determined through temporal matching of the data and reference selected.
+        By default, the date range is determined through temporal matching of the  selected data and reference.
         If you leave validation period fields empty, the default date range will be used.  For the time range
         covered by the various datasets, see the <a href="{% url 'datasets' %}">datasets page</a>.
     </p>
@@ -213,7 +214,7 @@
             </li>
             <li>
                 <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
-                or was aborted and will permanently delete the result. The remove button next to a validation being tracked,
+                or was aborted and will permanently delete the result. The remove button next to a validation being tracked
                 only removes the validation from this list, but doesn't delete it.
             </li>
             <li>
