--- a/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.scss
+++ b/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.scss
@@ -12,7 +12,17 @@
   float: left;
   padding-top: 0.3em;
 }
-.buttons{
-  position: relative;
-  left: 55%;
+
+@media screen and (max-width: 714.9px){
+
+  .att_val_container h5 {
+    font-size: 1rem;
+  }
+  .pinned-validation{
+    min-width: 20rem;
+  }
+  .pinned-validation-buttons {
+    min-width: 20rem;
+  }
+
 }
