font size changed for smaller screens

--- a/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.scss
+++ b/UI/src/app/modules/validation-result/components/sorting-form/sorting-form.component.scss
@@ -2,3 +2,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.15rem;
 }
+
+@media screen and (max-width: 548.9px){
+  div #sorting_form{
+    font-size: 1rem;
+    margin: 0;
+  }
+
+}
