New UI styling (#230)
* printing removed

* original colors applied to the navigation bar

* navigation bar icons enlarged

* p-panel edited

* z-index = 0 set, otherwise links don't work

* hrefs removed as they are not needed

* base font family added

* page 'about' styled

* help page styled, bootstrap import removed, images loaded with base64

* common styling moved to a global file

* sorting added so that there is always the same order in the table; styling added

* div changed to main, bootstrap removed, global styling loaded

* fixing home page

* global styling moved to styles.scss

* link to global styles updated

* styling buttons moved to global styles

* styling buttons moved to global styles

* redundant classes removed, bootstrap styling copied to styles.scss and importing bootstrap removed

* accordion tab styled; buttons for adding and removing datasets styled

* map collapsed and put after spatial subsetting

* buttons styling moved to global styles

* panel header padding changed

* edit name button background color changed

* icon for editing name set to font awesome; global styling loaded instead of bootstrap and buttons component

* class hidden moved to global styles

* p-panel content top and bottom padding set to 1rem

* styling for save name and cancel editing buttons added

* class result_page removed, label to the input added

* some text styling added

* styling for p-panel used in validationrun-row.component.html added

* text size in the input updated

* font color changed on the dropdown with action buttons

* some button styling added

* column size changed

* bootstrap button styling removed; used pButton instead with the old styling

* link decorations removed

* buttons for editing name styled using primeng

* buttons for editing name styled using primeng

* col-sm class added

* bootstrap classes changed to primeng classes

* doi link styled

* not

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6050,6 +6050,7 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 
 .btn-action.p-button {
   width: 2rem;
+  margin-bottom: 0.2rem;
 }
 
 .btn-action.p-button, .btn-action-large.p-button{
@@ -6176,4 +6177,3 @@ a.btn-action.p-button:hover, a.btn-action-large.p-button:hover{
 //    max-width: 5rem;
 //  }
 //}
-
