publishing component added to the validation-result.component.html

--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -30,4 +30,8 @@
     </div>
   </div>
 </div>
+  <!-- Custom modal setup -->
+  <qa-publishing></qa-publishing>
+<!--  <div id="modal-container" class="hidden"></div>-->
+<!--  <div id="overlay" (click)="removeModal()" class="hidden"></div>-->
 </main>
