opening window attached to the book button

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -217,7 +217,8 @@
             label="Publish"
             title="Publish on Zenodo"
             data-toggle="modal"
-            data-target="#publishDialog">
+            data-target="#publishDialog"
+            (click)="open()">
     </button>
 
     <a *ngIf="isLogged"
