--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -31,7 +31,7 @@
   </div>
 </div>
   <!-- Custom modal setup -->
-  <qa-publishing></qa-publishing>
+  <qa-publishing [validationId]="validationId"></qa-publishing>
 <!--  <div id="modal-container" class="hidden"></div>-->
 <!--  <div id="overlay" (click)="removeModal()" class="hidden"></div>-->
 </main>
